--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <input type="name" name="name" placeholder="name" value="">
           <input type="breed" name="breed" placeholder="breed" value="">
           <input type="sex" name="sex" placeholder="sex" value="">
-          <input type="submit"value="Submit">
+          <input id="submit" type="submit"value="Submit">
         </form>
       </div>
-      
+
       <div class="margin flex">
         <h4 class='center'>Registered Dogs</h4>
         <table class='margin' border="1">
